refactor & add winston
