# src/handlers/getPizzaByID.ts
@@ -1,21 +1,31 @@
 import { PizzaService } from '../service/service';
+import { HEADER, LOGGER } from '../const';
 
 export async function getPizzaByID(event: any) {
     try {
-        const { id } = event.queryStringParameters;
+        const id = event.pathParameters.id;
         const service = new PizzaService();
-        const pizza = service.getPizzaByID(id) || 'No result';
+        const pizza = service.getPizzaByID(id);
+
+        if (!pizza) {
+            LOGGER.warn(`[getAllPizzas] Ask undefined pizza ID`);
+            return {
+                statusCode: 404,
+                headers: HEADER,
+                body: JSON.stringify('No result'),
+            };
+        }
+
         const response = {
             statusCode: 200,
-            headers: {
-                'Access-Control-Allow-Origin': '*',
-                'Access-Control-Allow-Credentials': true,
-            },
+            headers: HEADER,
             body: JSON.stringify(pizza),
         };
+
+        LOGGER.info(`[getAllPizzas] return prepared response - ${JSON.stringify(response)}`);
         return response;
     } catch (error) {
-        console.log(`[getPizzaByID] Error - ${error}`);
+        LOGGER.error(`[getAllPizzas] ${error}`)
         return { statusCode: 500, body: 'Some server error.' };
     }
 };
